--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "antd": "^4.0.0",
+    "process": "^0.11.10",
     "react": "^16.13.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "showdown": "^1.9.1"
   },
   "devDependencies": {},
   "scripts": {
